<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a4c3b2"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@drawable/background_view_layout"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/adding_image_to_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />
        <com.example.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </FrameLayout>

   <LinearLayout
       android:id="@+id/linear_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@id/frame_layout"
       app:layout_constraintBottom_toTopOf="@id/ll2"
       android:orientation="horizontal"
       >
<ImageButton
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_margin="2dp"
    android:src="@drawable/pallet_normal"
    android:tag="@color/red"
    android:onClick="paintClicked"
    android:background="@color/red"
    android:contentDescription="@string/color_button"
    tools:ignore="UsingOnClickInXml" />
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/black"
          android:background="@color/black"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button" />
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/skin"
          android:background="@color/skin"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button"/>
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/teal_700"
          android:background="@color/teal_700"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button"/>
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/teal_200"
          android:background="@color/teal_200"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button"/>
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/purple_200"
          android:background="@color/purple_200"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button"/>
      <ImageButton
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
          android:src="@drawable/pallet_normal"
          android:tag="@color/green"
          android:background="@color/green"
          android:onClick="paintClicked"
          tools:ignore="UsingOnClickInXml"
          android:contentDescription="@string/color_button"/>
       <ImageButton
           android:id="@+id/color_picker"
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:layout_margin="2dp"
           android:background="@drawable/pallet_normal"
          android:src="@drawable/rainbowcolorpicker"
          android:contentDescription="@string/color_button"
           />




   </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:orientation="horizontal">
        <ImageButton
            android:contentDescription="@string/brush_buttom"
            android:id="@+id/brush_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/brush_paintbrush_icon"
            android:backgroundTint="#ffb3c6"
            />
        <ImageButton
            android:contentDescription="@string/eraser_button"
            android:id="@+id/eraser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eraser_icon"
            android:backgroundTint="#FCCA46"

            />

        <ImageButton
            android:contentDescription="@string/undo_button"
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/undo"
            android:backgroundTint="#FFFF00"/>
        <ImageButton
            android:contentDescription="@string/undo_button"
            android:id="@+id/Redo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/redo"
            android:backgroundTint="@color/yellow"/>
        <ImageButton
            android:contentDescription="@string/image_button_to_add_image_from_local_folder"
            android:id="@+id/select_image_form_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_t1np896hifcx"
            android:backgroundTint="#E61543"
          />
        <ImageButton
            android:contentDescription="@string/undo_button"
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saveicon"
            android:backgroundTint="#9163CB"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>